# skill-repo-feishu

feishu-bot-at/: SKILL.md
feishu-bot-at/references/: a2a-collaboration-session-20260710.md  adapter-modification-pitfalls.md  feishu-reply-quote-injection.md
feishu-bot-at/scripts/: distributed-anti-loop-plugin.py  feishu-bot-info.py  send-at-message.py  test-bot-at.py
feishu-file-collaboration/: .env.example  SKILL.md
feishu-file-collaboration/config/: settings.py
feishu-file-collaboration/core/: cache.py  token_manager.py
feishu-file-collaboration/handlers/: command_handler.py
feishu-file-collaboration/models/: __init__.py
feishu-file-collaboration/references/: feishu-drive-permissions.md
feishu-file-collaboration/scripts/: collaboration.py
feishu-file-collaboration/services/: drive_service.py
feishu-file-project/: .env.example  main.py  pyproject.toml
feishu-file-project/cards/: __init__.py
feishu-file-project/config/: settings.py
feishu-file-project/core/: token_manager.py
feishu-file-project/handlers/: card_handler.py  event_handler.py
feishu-file-project/services/: drive_service.py  file_ops_service.py  permission_service.py
feishu-file-project/utils/: logging_config.py
feishu-group-introduction/: SKILL.md  adapter.py
feishu-group-introduction/scripts/: send_group_introduction.py
feishu-group-rules/: SKILL.md
feishu-group-rules/scripts/: install.py
