[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-drive-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "cachetools>=5.5.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0", "mypy>=1.13.0"]
